--- a/realtime/index.html
+++ b/realtime/index.html
@@ -4,19 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RealTime</title>
+    <style>
+        #log{
+            width: 100%;
+            min-height: 100vh;
+            background-color:lightseagreen;
+            color:white;
+
+        }
+    </style>
 </head>
 <body>
 
     <h1>Realtime ...</h1>
     <hr>
 
+    <div id="log">
+
+    </div>
+
 
     <script src="https://cdn.socket.io/4.6.0/socket.io.min.js" integrity="sha384-c79GN5VsunZvi+Q/WObgk2in0CbZsHnjEqvFxC5DxHn9lTfNce2WW6h2pH6u/kF+" crossorigin="anonymous"></script>
-
+<script src="https://code.jquery.com/jquery-3.7.1.slim.js" integrity="sha256-UgvvN8vBkgO0luPSUl2s8TIlOSYRoGFAX4jlCIm9Adc=" crossorigin="anonymous"></script>
     <script>
+        function log(params) {
+            if(typeof params === "string")
+                $('#log').append(params + "<br>")
+            if(typeof params === "object")
+                $('#log').append(JSON.stringify(params , null , '\t'))
+        }
+        
+        
         const socket = io();
-        console.log(socket)
-      </script>
+        socket.on('connect' , () => {
+            log("connected" , socket.io)
+            socket.on("INSERT" , (obj) => {
+                log(obj)
+            })
+        })
+
+
+
+    </script>
 
 </body>
 </html>
