--- a/realtime/index.html
+++ b/realtime/index.html
@@ -41,6 +41,12 @@
             socket.on("INSERT" , (obj) => {
                 log(obj)
             })
+            socket.on("UPDATE" , (obj) => {
+                log(obj)
+            })
+            socket.on("DELETE" , (obj) => {
+                log(obj)
+            })
         })
 
 
