--- a/realtime/index.html
+++ b/realtime/index.html
@@ -1,57 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RealTime</title>
     <style>
-        #log{
-            width: 100%;
-            min-height: 100vh;
-            background-color:lightseagreen;
-            color:white;
-
-        }
+      #log {
+        width: 100%;
+        min-height: 100vh;
+        background-color: lightseagreen;
+        color: white;
+      }
     </style>
-</head>
-<body>
-
+  </head>
+  <body>
     <h1>Realtime ...</h1>
-    <hr>
+    <hr />
 
-    <div id="log">
+    <div id="log"></div>
 
-    </div>
-
-
-    <script src="https://cdn.socket.io/4.6.0/socket.io.min.js" integrity="sha384-c79GN5VsunZvi+Q/WObgk2in0CbZsHnjEqvFxC5DxHn9lTfNce2WW6h2pH6u/kF+" crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-3.7.1.slim.js" integrity="sha256-UgvvN8vBkgO0luPSUl2s8TIlOSYRoGFAX4jlCIm9Adc=" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.socket.io/4.6.0/socket.io.min.js"
+      integrity="sha384-c79GN5VsunZvi+Q/WObgk2in0CbZsHnjEqvFxC5DxHn9lTfNce2WW6h2pH6u/kF+"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://code.jquery.com/jquery-3.7.1.slim.js"
+      integrity="sha256-UgvvN8vBkgO0luPSUl2s8TIlOSYRoGFAX4jlCIm9Adc="
+      crossorigin="anonymous"
+    ></script>
     <script>
-        function log(params) {
-            if(typeof params === "string")
-                $('#log').append(params + "<br>")
-            if(typeof params === "object")
-                $('#log').append(JSON.stringify(params , null , '\t'))
-        }
-        
-        
-        const socket = io();
-        socket.on('connect' , () => {
-            log("connected" , socket.io)
-            socket.on("INSERT" , (obj) => {
-                log(obj)
-            })
-            socket.on("UPDATE" , (obj) => {
-                log(obj)
-            })
-            socket.on("DELETE" , (obj) => {
-                log(obj)
-            })
-        })
+      function log(params) {
+        if (typeof params === "string") $("#log").append(params + "<br>");
+        if (typeof params === "object")
+          $("#log").append(JSON.stringify(params, null, "\t") + "<br>");
+      }
 
-
-
+      const socket = io();
+      socket.on("connect", () => {
+        log("connected", socket.io);
+        socket.on("INSERT", (obj) => {
+          log(obj);
+        });
+        socket.on("UPDATE", (obj) => {
+          log(obj);
+        });
+        socket.on("DELETE", (obj) => {
+          log(obj);
+        });
+      });
     </script>
-
-</body>
+  </body>
 </html>
